<resources>
    <string name="app_name">Mr. Ahmed Gamal </string>
    <string name="Sign_in">تسجيل الدخول</string>
    <string name="Sign_up">الاشتراك</string>
    <string name="s_in_up">    يُرجى تسجيل الدخول \n
    أو الاشتراك لو لم يكن لديك حساب </string>
   <string name="phoneN">01201206252</string>
<string name="notification"> Notifications </string>
    <string name="numberExams">   0 \n
    أمتحان </string>
    <string name="students">   0 \n
    طالب </string>
    <string name="acadmyface">صفحتنا لاكاديميه اللغة الانجليزية</string>
    <string name="enteras"> إذا كنت ترغب في البحث عن نتائج اشخاص تهمك  قم باختيار \n ولي أمر \n أما اذا كنت ترغب بالتعليم قم بإختيار \n  طالب </string>
    <string name="notesforParent"> قم بإدخال الكود الخاص بالطالب حتي نتمكن من جلب جميع النتائج الخاصة بهذا الطالب   </string>
    <string name="topteacher"> www.English2Fun.com </string>
    <string name="register"> التسجيل </string>
    <string name="register1">يرجي تعبئة جميع البيانات </string>
    <string name="third_name"> الاسم (ثنائي) </string>
    <string name="email">Email</string>
    <string name="pass"> كلمة المرور </string>
    <string name="Make_sure_From_Pass"> تأكيد كلمة المرور </string>
    <string name="phone"> Phone Number </string>
    <string name="ihaveacount"> لديك حساب بالفعل؟ </string>
    <string name="login"> تسجيل الدخول </string>
    <string name="no_account">ليس لديك حساب؟ </string>
    <string name="write_email">الرجاء كتابة البريد الإلكتروني</string>
    <string name="write_email_in_correct_way">الرجاء كتابة البريد الإلكتروني بطريقة صحيحة</string>
    <string name="empty_field"> يرجى تعبئة الحقل من فضلك</string>
    <string name="notLookedLikeYahoo"> لابد أن يكون علي الشكل  email@example.com   </string>
    <string name="enterPass">قم بادخال الرقم السري من فضلك</string>
    <string name="less12char">لابد ان يكون اكثر من 8 حرف للامان</string>
    <string name="should_like_pass"> الرقم السري لابد ان يكون مشابها للذي ادخلته</string>
    <string name="edit1_notLoke_edit2">قم بالتاكد من صحه الرقم السري الذي ادخلته</string>
    <string name="enter_phone">من فضلك قم بادخال رقم الهاتف الخاص بك</string>
    <string name="select_country">قم باختيار دوله من فضلك</string>
    <string name="problem_register"> لقد حدثت مشكله اثناء الاتصال </string>
    <string name="email_exist"> هذا الايميل موجود بالفعل مسبقا حاول مره اخري </string>
    <string name="makesure_fromNetword"> لا يوجد انترنت تاكد من الاتصال من الانترنت </string>
    <string name="sameEmailProblem"> com.google.firebase.auth.FirebaseAuthUserCollisionException: The email address is already in use by another account. </string>
    <string name="netword_error"> com.google.firebase.FirebaseNetworkException: A network error (such as timeout, interrupted connection or unreachable host) has occurred. </string>
    <string-array name="country">

        <item>الدولة</item>
        <item>مصر</item>
        <item>تركيا</item>
        <item>السودان</item>
        <item>السعوديه</item>
        <item>الامارات</item>
        <item>الكويت</item>
        <item>قطر</item>
        <item>الصومال</item>
        <item>ليبيا</item>
        <item>الأردن</item>
        <item>لبنان</item>
        <item>مالطا</item>
        <item>المغرب</item>
        <item>فلسطين</item>
        <item>تونس</item>
        <item>الولايات المتحدة الأمريكية</item>
        <item>إنجلترا</item>
        <item>كندا</item>
        <item>النمسا</item>
        <item>اليمن</item>
        <item>الجزائر</item>
        <item>جيبوتي</item>
        <item>العراق</item>
        <item>موريتانيا</item>
        <item>عمان</item>

    </string-array>
    <string-array name="student_or_parent">

        <item>إختر موضعك لإكمال التسجيل</item>
        <item>طالب</item>
        <item>ولي أمر</item>


    </string-array>
    <string-array name="unites">
        <item>Select Unit</item>
        <item> Unit 1</item>
        <item> Unit 2</item>
        <item> Unit 3</item>
        <item> Unit 4</item>
        <item> Unit 5</item>
        <item> Unit 6</item>
        <item> Unit 7</item>
        <item> Unit 8</item>
        <item> Unit 9</item>
        <item> Unit 10</item>
        <item> Unit 11</item>
        <item> Unit 12</item>
        <item> Unit 13</item>
        <item> Unit 14</item>
        <item> Unit 15</item>
        <item> Unit 16</item>
        <item> Unit 17</item>
        <item> Unit 18</item>
        <item> General </item>

    </string-array>
    <string name="depStudent"> Student Mangment  </string>
    <string name="Student_complaints"> Student complaints </string>
    <string name="studentRequest">  Requests of Student in This Unit </string>
    <string-array name="educations">

        <item> Select Item </item>
        <item> Primary </item>
        <item> Prep </item>
        <item> Secondary </item>
        <item> College </item>

    </string-array>
    <string-array name="Primary">

        <item>إختر صف دراسي</item>



        <item>1st-primary</item>
        <item>2nd-primary</item>
        <item>3rd-primary</item>
        <item>4th-primary</item>
        <item>5th-primary</item>
        <item>6th-primary</item>


    </string-array>
    <string-array name="Prep">

        <item>إختر صف دراسي</item>
        <item>1st-prep</item>
        <item>2nd-prep</item>
        <item>3rd-prep</item>



    </string-array>
    <string-array name="Secondary">

        <item>إختر صف دراسي</item>
        <item>1st-secondary</item>
        <item>2nd-secondary</item>
        <item>3rd-secondary </item>



    </string-array>
    <string-array name="College">

        <item>إختر فرقه دراسي</item>
        <item>1st-university </item>
        <item>2nd-university</item>
        <item>3rd-university</item>

        <item>4th-university</item>
        <item>5th-university</item>
        <item>6th-university</item>
        <item>7th-university</item>


    </string-array>
    <string name="addExam">Add exam</string>
    <string name="mangeStudent">Students Management</string>
    <string name="examList">Exams List in This Unit</string>
    <string name="PleaseMakesure">Please make sure that your email and password are correct</string>
    <string name="banned">Blocking</string>
    <string name="Rating"> تقييم الطالب </string>
    <string name="results">Results of students in This Unit</string>
    <string name="questions">Question Bank in This Unit</string>
    <string name="exit">Exit</string>
    <string name="Search">Search</string>
    <string name="Q_One"> Write the question here </string>
    <string name="addQ">Add a question</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Warning</string>
    <string name="message">Do you want to sign out? </string>
    <string name="Ok"> Ok </string>
    <string name="ask_banned">Are you sure you want to block the Student?</string>
    <string name="successful_banned">Student Successfully blocked </string>
    <string name="WrongTitle">Error</string>
    <string name="YouareBanned">Sorry, you have been banned by the Admin: Mr. Ahmed Samy ..</string>
    <string name="removeBan">Remove ban </string>
    <string name="RemoveAsk">Do you want to unBlock Student? </string>
    <string name="RemoveDone">Student Successfully unBlocked</string>
    <string name="choosenQuestion">Selected Questions</string>
    <string name="question">Questions</string>
    <string name="examTime">Exam Time</string>
    <string name="s_m_h">Hour : Minute : Second </string>
    <string name="DegreeDistribution">Grades</string>
    <string name="writeQuestionempty"> Please, Enter Question here </string>
    <string name="answerOne"> Enter The First Answer </string>
    <string name="answerTwo"> Enter The Second Answer</string>
    <string name="answerThre"> Enter The Third Answer </string>
    <string name="answerFour"> Enter The Fourth Answer </string>
    <string name="ExamName">Exam Name</string>
    <string name="edit_Q">Edit Question</string>
    <string name="edit">  Editing </string>
    <string name="delete"> Delete Question </string>
    <string name="MyResult">My Results in This Unit</string>
    <string name="aboutus">Contact us</string>
    <string name="aboutDoctor">عن مستر أحمد جمال</string>
    <string name="aboutProgrammer">About Programmer </string>
    <string name="sendtoaddexam">Send to Exam</string>
    <string name="delete_Exam">Delete Exam</string>
    <string name="Aboutus1">دائمًا نبحث عن التميز والإبداع\nومازلنا نبحث عما يرضي أذواق \n عملائنا الكرام</string>
    <string name="Contectus">للتواصل</string>
    <string name="Aboutus2">\nم/ علاء محمود \n alaadah95@gmail.com \n م/ محمد رسلان   \n mohamed.raslan79@yahoo.com </string>
    <string name="startexam">Start test</string>
    <string name="Next">Next</string>
    <string name="Skip">Skip</string>
    <string name="Result">Exam Result</string>
    <string name="Home">Main</string>
    <string name="result">Results</string>
    <string name="hisAnswer">Answered : </string>
    <string name="correctAnswer">Correct Answer :</string>
    <string name="studentsWrongs">Mistakes of students</string>
    <string name="StudentResult">  Results Of Student \n in all Exams </string>
    <string name="delete_results">Delete Results</string>
    <string name="DoctorName">Mr . Ahmed Samy</string>
    <string name="Personal_Data">  التواصل  </string>
    <string name="Personal_Data_Details">
        - الاســـم :   أحمد سامي إبراهيم عمر
                    </string>
    <string name="one">  1. ليسانس آداب وتربية قسم اللغة الإنجليزية 2007 من كلية التربية فرع  \n السادات جامعة المنوفية. </string>
    <string name="two">  2. دبلومة الترجمة والأدب الإنجليزي 2011 من كلية  \n الآداب بشبين الكوم جامعة المنوفية.</string>
    <string name="three"> 3. يدرس حالياً الماجستير في  الترجمة واللغة   Linguistics  \n في جامعة القاهرة.</string>
    <string name="four"> 4. شهادة TOEFL في اللغة الإنجليزية 2010.</string>
    <string name="five">5. شهادة رخصة قيادة الحاسب الآلي على  \nالمستوى الدولي  (ICDL International)
                                    \n  من مركز نظم وتكنولوجيا المعلومات   بإدارة  جامعة المنوفية 2010 .</string>
    <string name="sexplus"> 7. حاصل على (دورة تأهيل المعلم الحديث) 2009.</string>
<string name="sex"> 6. شهادات أخرى مختلفة في الحاسب الآلي من بينها البرمجة وتصميم المواقع والجرافيك.  </string>
    <string name="experiences"> صفحه الفيس بوك </string>
    <string name="numberone">  - الاسم: مستر أحمد سامي إبراهيم عمر.. معلم لغة إنجليزية للمرحلة الثانوية، ومترجم، ومبرمج ويب محترف، ومدرب كورسات معتمدة لغة إنجليزية.. شارك في ترجمة الكثير من الروايات والأفلام والمسلسلات الأجنبية..  </string>
    <string name="hobby">  يملك 3 مواقع رسمية على الإنترنت بالإضافة لقناة رسمية على اليوتيوب وهواياته الترجمة والتصميم والبرمجة والكمبيوتر والإنترنت والقراءة والتأليف. المواقع هي:  </string>
    <string name="websites1"> www.CaptainMajed.com</string>
    <string name="websites2"> www.English2Fun.com </string>
    <string name="websites3"> www.MrAhmedSamy.com </string>
    <string name="Xzena">    كما شارك في ترجمة المسلسل الأسطوري (هرقل وزينا) الذي تجدونه مترجمًا على الرابط التالي:    \n
        www.xena.english2fun.com     </string>
    <string name="following">  المتابعه  </string>
    <string name="folowsface">   1. فيسبوك:    \n
                                   https://www.facebook.com/ahmedsamy37 </string>
    <string name="youtube">   3. يوتيوب      \n
                                    https://twitter.com/ahmedsamy3000 </string>
    <string name="folowstwitter">   2. تويتر:    \n
                                    https://twitter.com/ahmedsamy3000 </string>
    <string name="OK">   4. اوك:    \n
                                    https://twitter.com/ahmedsamy3000 </string>
    <string name="deletemyaccount">   في حالة حذف الحساب لم تتمكن مره اخري من الدخول هل تريد بالفعل حذف الحساب؟ </string>
<string name="egypt">الولايات المتحده</string>
    <string name="banner_ad_unit_id">ca-app-pub-4214877267260040/2100906857</string>
</resources>