<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiantcolor"
 >



    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:id="@+id/scroll"
    android:layout_centerVertical="true"
    android:isScrollContainer="false"
        android:layout_below="@+id/publisherAdView"
    android:scrollbars="none"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:padding="20dp"
    >



    <!--<com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--ads:adSize="BANNER"-->
        <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
        <!--ads:layout_anchor="@+id/Exam_List_rec"-->
        <!--ads:layout_anchorGravity="top|center" />-->
    <ImageView
        android:id="@+id/imageAn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:elevation="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"

        />

    <TextView
        android:id="@+id/image2"
        android:layout_width="250dp"
        android:gravity="center"
        android:elevation="5dp"
        android:textSize="22dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/cairo"
        />


    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        android:fontFamily="@font/cairo"
        android:gravity="center_horizontal"
        android:text="@string/s_in_up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic" />


    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"

        >

        <Button
            android:id="@+id/Goto_signin"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_background2"
            android:elevation="4dp"
            android:fontFamily="@font/cairo"
            android:text="@string/Sign_in"
            android:textColor="@color/color1"
            android:textSize="16sp"
             />

        <Button
            android:id="@+id/Goto_signup"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@drawable/button_background"
            android:elevation="4dp"
            android:fontFamily="@font/cairo"
            android:text="@string/Sign_up"
            android:textColor="@color/color2"
            android:textSize="16sp"
             />

    </LinearLayout>
</LinearLayout>
</ScrollView>


    <com.google.android.gms.ads.doubleclick.PublisherAdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/publisherAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.doubleclick.PublisherAdView>


</RelativeLayout>
