<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@color/color3"
    >

 <ScrollView
     android:id="@+id/scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
         android:paddingBottom="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <ImageView
             android:scaleType="fitXY"
             android:src="@drawable/group2"
             android:layout_width="match_parent"
             android:layout_height="150dp" />

     </LinearLayout>

     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView
             android:id="@+id/toolbar_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/cairo"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/aboutDoctor"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold"
             android:elevation="8dp"
             />


         <ImageView
             android:id="@+id/facebook"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="80dp"
             android:layout_marginTop="10sp"
             android:background="@drawable/facingbook"
             android:scaleType="fitXY" />
     </LinearLayout>
         <LinearLayout
             android:id="@+id/essamphotoLayout"
             android:layoutDirection="rtl"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">


             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/home"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="70dp"
                 android:background="@drawable/ahmedsamy"
                 android:elevation="8dp"
                 />

             <TextView
                 android:id="@+id/Doctorname"
                 android:layout_width="wrap_content"
                 android:layout_marginStart="40dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/cairo"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/app_name"
                 android:layout_gravity="bottom"
                 android:textColor="@color/color4"
                 android:textSize="15dp"

                 />

         </LinearLayout>

         <android.support.v7.widget.CardView
             android:layout_below="@+id/essamphotoLayout"
             android:id="@+id/Press_on_CardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="8dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:padding="5dp"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layoutDirection="rtl"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:padding="15dp"
                 >

                 <TextView
                     android:id="@+id/Personal_Data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/cairo"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="@string/Personal_Data"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:layout_weight="3"
                     />
                 <ImageView
                     android:id="@+id/image_dropdown"
                     android:layout_width="30dp"
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="20dp"
                     android:scaleType="fitXY"
                     android:padding="5dp"
                     android:src="@drawable/ic_dropdown"
                     android:layout_weight="0"
                     />

             </LinearLayout>


         </android.support.v7.widget.CardView>

         <RelativeLayout
             android:id="@+id/Details_layout"
             android:background="@drawable/toolbar_background"
             android:layout_width="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Press_on_CardView"
             >

             <TextView
                 android:id="@+id/Details1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/cairo"
                 android:text="@string/Personal_Data_Details"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:layout_margin="5dp"
                 android:padding="5dp"
                 />


         </RelativeLayout>


         <android.support.v7.widget.CardView
             android:layout_below="@+id/Details_layout"
             android:id="@+id/Press_on_CardView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="8dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:padding="5dp"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layoutDirection="rtl"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:padding="15dp"
                 >

                 <TextView
                     android:id="@+id/experiences"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/cairo"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="@string/experiences"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:layout_weight="3"
                     />
                 <ImageView
                     android:id="@+id/image_dropdown2"
                     android:layout_width="30dp"
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="20dp"
                     android:scaleType="fitXY"
                     android:padding="5dp"
                     android:src="@drawable/ic_dropdown"
                     android:layout_weight="0"
                     />

             </LinearLayout>


         </android.support.v7.widget.CardView>



     </RelativeLayout>

 </ScrollView>

</FrameLayout>
