<ScrollView
    android:id="@+id/Scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"

    xmlns:android="http://schemas.android.com/apk/res/android">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/building"
            android:elevation="8dp"
            />
    </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                >


                <ImageView
                    android:id="@+id/facebookm"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="32dp"
                    android:background="@drawable/facingbook"
                    android:scaleType="fitXY" />


                <ImageView
                    android:id="@+id/facebooka"
                    android:layout_width="50dp"

                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/facingbook"
                    android:scaleType="fitXY" />

            </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="86dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/mohamed"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:id="@+id/circleImageView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:layout_toStartOf="@+id/circleImageView2"
            android:fontFamily="@font/cairo"
            android:text="م/ علاء محمود "
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:id="@+id/textView" />




        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/alaa"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:id="@+id/circleImageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/circleImageView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="97dp"
            android:fontFamily="@font/cairo"
            android:text="م/ محمد رسلان "
            android:textColor="@color/color4"
            android:textSize="18sp" />




            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="25dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_layout"
                android:layout_centerHorizontal="true"
                android:elevation="8dp"
                android:layout_below="@+id/circleImageView"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="center_horizontal"
                >


                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-4214877267260040/2100906857" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/Aboutus1"
                    android:gravity="center_horizontal"
                    />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color4"
                        android:textSize="18sp"
                        android:fontFamily="@font/cairo"
                        android:text="@string/Contectus"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:fontFamily="@font/cairo"
                        android:text="@string/Aboutus2"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>

    </RelativeLayout>
   </FrameLayout>
</ScrollView>
